k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chat-application-backend
  namespace: chat-app
  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-application-backend
  template:
    metadata:
      labels:
        app: chat-application-backend
    spec:
      containers:
        - name: chat-application-backend
          image: ramazan115/chat-application-backend
          ports:
            - containerPort: 5001
