k8s/frontend-deployment.yml
kind: Deployment 
apiVersion: apps/v1
metadata:
    name: chat-application-frontend
    namespace: chat-app
spec: 
    replicas: 2
    selector:
       matchLabels:
           app: chat-application-frontend
    template:

        metadata:
            labels:
                app: chat-application-frontend
        spec:
         containers:
            - name: chat-application-frontend
              image: ramazan115/chat-application-frontend
              ports:
                - containerPort: 80
