k8s/mongoDB-deployment.yml
kind: Deployment
apiVersion: apps/v1 
metadata:
    name: chat-application-mongodb
    namespace: chat-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: chat-application-mongodb
    template:
        metadata:
            labels:
                app: chat-application-mongodb
        spec:
            containers:
                - name: chat-application-mongodb
                  image: mongo:latest
                  ports:
                    - containerPort: 27017

                  volumeMounts:                           
                   - name: mongo-persistent-storage
                     mountPath: /data/db

            volumes:
             - name: mongo-persistent-storage
               persistentVolumeClaim:
                 claimName: chat-application-mongodb-pvc
