k8s/backend-service.yml
kind: Service 
apiVersion: v1
metadata: 
   name: backend
   namespace: chat-app
spec:
   type: NodePort
   selector:
      app: chat-application-backend
   ports:
      - port: 5001
        targetPort: 5001
        nodePort: 30501
