k8s/frontend-service.yml
kind: Service 
apiVersion: v1
metadata: 
   name: frontend
   namespace: chat-app
spec:
   type: ClusterIP
   selector:
      app: chat-application-frontend
   ports:
      - port: 8080
        targetPort: 80
