k8s/mongoDB-service.yml
kind: Service 
apiVersion: v1
metadata: 
   name: mongodb
   namespace: chat-app
spec:
   type: ClusterIP
   selector:
      app: chat-application-mongodb
   ports:
      - port: 27017
        targetPort: 27017
