k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: chat-application-ingress
    namespace: chat-app
    annotations: 
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
   rules:
    - host: ramajan.com
      http:
         paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5001
